# FastAPI-REPO

./: FastApi Note  FastApi Note2  FastApi Note4  FastApi_Note3  main.py  pyproject.toml
FastApi Day1/: main.py
app/Config/: base.py
app/models/: likes.py  movies.py  reviews.py  users.py
app/routers/: likes.py  movies.py  reviews.py  users.py
app/schemas/: likes.py  movies.py  reviews.py  users.py
app/utils/: file.py  jwt.py
