[tool.poetry]
name = "fastapi-assignment"
version = "0.1.0"
description = ""
authors = ["tkdqh57 <tkdqh57@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"


[tool.poetry.group.dev.dependencies]
mypy = "1.13.0"
ruff = "0.8.2"
black = "24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.ruff]
target-version = "py313"

[tool.mypy]
plugins = ["pydantic.mypy"]
python-version = 3.13
strict = true